# api-services

./: .gitignore
cli/: pyproject.toml
cli/src/climate/: main.py
cli/src/inventory/: Acquire.py  Drop.py  Exceptions.py  Give.py  Info.py  Instance.py  Use.py  main.py
cli/src/inventory/spec/: item.py
cli/src/inventory/specs/: ItemSpec.py  __init__.py
cli/src/narrator/: Checkpoint.py
cli/src/omnipresence/: Who.py  __init__.py  main.py
cli/src/persona/: Ego.py  Errors.py  Look.py  Persona_Creator.py  Talk.py
srv/: pyproject.toml
srv/endpoints/: manage.py
srv/endpoints/api/: models.py  serializers.py
srv/endpoints/api/migrations/: 0001_initial.py
srv/endpoints/climate/: __init__.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.old  views.py
srv/endpoints/climate/migrations/: 0001_initial.py  0002_climatemodel_delete_transientmodel.py
srv/endpoints/core/: settings.py  urls.py  viewsets.py
srv/endpoints/inventory/: models.py  serializers.py  urls.py  views.py
srv/endpoints/inventory/migrations/: 0001_initial.py  0002_remove_inventory_decrement_item_qty_trigger_and_more.py  0003_alter_inventory_item_name.py  0004_inventory_item_owner_alter_inventory_item_name.py  0005_alter_inventory_item_owner.py  0006_alter_inventory_item_owner.py  0007_alter_inventory_item_owner.py  0008_remove_inventory_item_owner_and_more.py  0009_alter_inventory_item_name.py  0010_inventory_item_owner_alter_inventory_item_name.py  0011_inventory_item_bytestring.py  0012_alter_inventory_item_bytestring.py  0013_remove_inventory_decrement_item_qty_trigger_and_more.py  0014_remove_inventory_calculate_item_bulk_and_more.py  0015_remove_inventory_calculate_item_bulk.py  0016_inventory_item_version.py  0017_remove_inventory_decrement_item_qty_trigger_and_more.py  0018_remove_inventory_decrement_item_qty_trigger_and_more.py  0019_remove_inventory_decrement_item_qty_trigger_and_more.py  0020_remove_inventory_decrement_item_qty_trigger_and_more.py  0021_remove_inventory_decrement_item_qty_trigger_and_more.py  0022_remove_inventory_decrement_item_qty_trigger_and_more.py  0023_remove_inventory_decrement_item_qty_trigger_and_more.py  0024_remove_inventory_decrement_item_qty_trigger_and_more.py  0025_inventory_detect_inventory_overburden.py  (+9 more)
srv/endpoints/omnipresence/: apps.py  models.py  serializer.py  urls.py  views.py
srv/endpoints/persona/: models.py  serializers.py  urls.py  views.py
srv/endpoints/services/: .urls.py.swp  asgi.py  settings.py  urls.py  wsgi.py
(+35 files in other folders)
