[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "world-codespaces-api-client"
version = "0.1.0"
dependencies = [
    "arglite",
    "pennant",
    "python-dotenv",
    "requests",
    "rich"
]

readme = "README.md"
description = "Client-sided API interaction installed to Codespaces container."

[project.scripts]
inventory = "inventory:main.list"
get = "inventory:main.acquire"
climate = "climate:main.main"
