[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "world-codespaces-api-client"
version = "0.1.0"
dependencies = [
    "arglite",
    "pennant",
    "python-dotenv",
    "requests",
    "rich"
]

readme = "README.md"
description = "Client-sided API interaction installed to Codespaces container."

[project.scripts]
presence = "omnipresence:main.report"
inventory = "inventory:main.list"
get = "inventory:Acquire.cmd"
use = "inventory:Use.cmd"
drop = "inventory:Drop.cmd"
climate = "climate:main.main"
